--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hannah Rajarao Resume</title>
+    <link href="style.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1>Hannah Rajarao</h1>
+      <h2>Experience</h2>
+      <h3>Point Cloud Test Engineer</h3>
+        <p><strong>Ouster</strong></p>
+        <p>Analysized test station data to improve reliability of point cloud test</p>
+      <h3>Cooper Union Summer STEM</h3>
+        <p>Taught students building and programming fundamentals in a remote setting</p>
+      <div class = "education">
+        <h2>Education</h2>
+          <h3>Cooper Union</h3>
+            <p>Mechanical Engineering</p>
+      </div>
+      <h2>Projects</h2>
+        <h3>resume.html</h3>
+          <p>I wanted to learn front end and improve my resume so why not do both</p>
+        <h3>Something Robotics</h3>
+    </body>
+</html>
